# Git-Module-Armageddon

./: README.md  platformio.ini
include/: Jeepify.h  Module_Definitions.h  PeerClass.h  lv_conf.h  pref_manager.h
src/: Module.cpp  Module.h  PeerClass.cpp  ToDo  main.cpp  pref_manager.cpp
src/ui/: CMakeLists.txt  filelist.txt  ui.c  ui.h  ui_events.cpp  ui_events.h  ui_helpers.c  ui_helpers.h
src/ui/components/: ui_comp.c  ui_comp.h  ui_comp_hook.c  ui_comp_hook.h  ui_comp_switchbutton.c  ui_comp_switchbutton.h
src/ui/images/: ui_img_1404430020.c  ui_img_1825836894.c  ui_img_1844714932.c  ui_img_551600910.c  ui_img_bg_grill_png.c  ui_img_gauge_leer_100_png.c  ui_img_gauge_leer_240_png.c  ui_img_icon_calib_png.c  ui_img_icon_gauge_png.c  ui_img_icon_keyboard_png.c  ui_img_icon_pair_off_png.c  ui_img_icon_pair_png.c  ui_img_icon_settings_png.c  ui_img_icon_switch_png.c  ui_img_toggle_vertical_off_75_png.c  ui_img_toggle_vertical_on_75_png.c
src/ui/screens/: ui_ScrChangeName.c  ui_ScrGauge.c  ui_ScrGaugeSingle.c  ui_ScrMenu.c  ui_ScrNumKey.c  ui_ScrPeers.c  ui_ScrSettings.c  ui_ScrSwitch.c  ui_ScreenCalib.c  ui_ScreenGaugeMulti.c
